Tidying up exceptions not thrown, etc